2022-08-27  Frank Mittelbach  <Frank.Mittelbach@latex-project.org>

	* widows-and-orphans.dtx (subsection{Checking \outputpenalty}):
	When testing against the \outputpenalty use \@clubpenalty instead of
	\clubpenalty to avoid spurious matches in some cases.

2021-03-05  Frank Mittelbach  <Frank.Mittelbach@latex-project.org>

	* widows-and-orphans.dtx:
	xparse now part of the kernel and doesn't need loading.

2020-01-22  Frank Mittelbach  <Frank.Mittelbach@latex-project.org>

	* widows-and-orphans.dtx:
	Version 1.0c was a maintenance release without any code changes.

2018-11-18    <Frank.Mittelbach@latex-project.org>

	* widows-and-orphans.dtx: Surplus open ( in message,
	spotted by Barbara Beeton's eagle eyes.
