@@ -1,6 +1,6 @@
 This is a generated file for the l3build validation system.
 Don't change this file in any respect.
 (widows-and-orphans.sty
-Package: widows-and-orphans ....-..-.. vv... Detecting widows and orphans (FMi)
+Package: widows-and-orphans ....-..-.. v... Detecting widows and orphans (FMi)
 \l__fmwao_tmp_int=\count...
 )
