@@ -1,0 +1,37 @@
+% same as 003 but with draft class option
+
+\documentclass[draft]{article}
+
+\input{regression-test}
+    
+
+\usepackage{widows-and-orphans}
+
+\newcommand\stupidpara{A first (orphan?) line\\a second line\\and a final (widow?) line.\par}
+\newcommand\verystupidpara{A two-line para\\with (orphan+widow?) or not?\par}
+
+\setlength\textheight{5\baselineskip}
+
+\begin{document}
+
+\START
+
+\tracingpages1\tracingonline1
+
+  first line \\
+  second line \\
+  third line \\
+  fourth line \\
+  Widow line before display:
+  \[ a_x=\frac{1}{2}^2 \]
+
+
+  \stupidpara\stupidpara\stupidpara\stupidpara
+  \verystupidpara\verystupidpara\verystupidpara\verystupidpara
+
+
+  \twocolumn
+  \stupidpara\stupidpara\verystupidpara\stupidpara
+  \stupidpara\verystupidpara\verystupidpara\verystupidpara
+
+\end{document}
