@@ -1,0 +1,99 @@
+This is a generated file for the l3build validation system.
+Don't change this file in any respect.
+%% goal height=60.0, max depth=5.0
+% t=0.0 g=60.0 b=10000 p=0 c=100000#
+% t=10.0 g=60.0 b=10000 p=150 c=100000#
+% t=22.0 g=60.0 b=10000 p=0 c=100000#
+% t=34.0 g=60.0 b=10000 p=0 c=100000#
+% t=46.0 g=60.0 b=10000 p=50 c=100000#
+LaTeX Font Info:    External font `cmex10' loaded for size
+(Font)              <7> on input line ....
+LaTeX Font Info:    External font `cmex10' loaded for size
+(Font)              <5> on input line ....
+% t=78.05238 plus 3.0 g=60.0 b=* p=0 c=*
+Package widows-and-orphans Info: Display widow on page 2
+[1
+]
+%% goal height=60.0, max depth=5.0
+% t=30.05238 plus 3.0 g=60.0 b=10000 p=0 c=100000#
+% t=49.55238 plus 7.0 minus 3.0 g=60.0 b=332 p=150 c=482#
+% t=61.55238 plus 7.0 minus 3.0 g=60.0 b=14 p=152 c=166#
+% t=73.55238 plus 7.0 minus 3.0 g=60.0 b=* p=0 c=*
+Package widows-and-orphans Info: Widow on page 3
+[2]
+%% goal height=60.0, max depth=5.0
+% t=10.0 g=60.0 b=10000 p=0 c=100000#
+% t=22.0 plus 1.0 g=60.0 b=10000 p=150 c=100000#
+% t=34.0 plus 1.0 g=60.0 b=10000 p=152 c=100000#
+% t=46.0 plus 1.0 g=60.0 b=10000 p=0 c=100000#
+% t=58.0 plus 2.0 g=60.0 b=100 p=150 c=250#
+% t=70.0 plus 2.0 g=60.0 b=* p=152 c=*
+Package widows-and-orphans Info: Orphan on page 3
+[3]
+%% goal height=60.0, max depth=5.0
+% t=10.0 g=60.0 b=10000 p=152 c=100000#
+% t=22.0 g=60.0 b=10000 p=0 c=100000#
+% t=34.0 plus 1.0 g=60.0 b=10000 p=150 c=100000#
+% t=46.0 plus 1.0 g=60.0 b=10000 p=152 c=100000#
+% t=58.0 plus 1.0 g=60.0 b=800 p=0 c=800#
+% t=70.0 plus 2.0 g=60.0 b=* p=302 c=*
+[4]
+%% goal height=60.0, max depth=5.0
+% t=10.0 g=60.0 b=10000 p=302 c=100000#
+% t=22.0 g=60.0 b=10000 p=0 c=100000#
+% t=34.0 plus 1.0 g=60.0 b=10000 p=302 c=100000#
+% t=46.0 plus 1.0 g=60.0 b=10000 p=0 c=100000#
+% t=58.0 plus 2.0 g=60.0 b=100 p=302 c=402#
+% t=70.0 plus 2.0 g=60.0 b=* p=0 c=*
+Package widows-and-orphans Info: Orphan on page 5 (second column) and widow on
+(widows-and-orphans)             page 6 (first column)
+[5]
+%% goal height=60.0, max depth=5.0
+% t=10.0 g=60.0 b=10000 p=0 c=100000#
+% t=22.0 plus 1.0 g=60.0 b=10000 p=302 c=100000#
+% t=34.0 plus 1.0 g=60.0 b=10000 p=0 c=100000#
+% t=34.0 plus 1.0 plus 1.0fil g=60.0 b=0 p=-10000 c=-10000#
+[6]
+%% goal height=60.0, max depth=5.0
+% t=0.0 g=60.0 b=10000 p=0 c=100000#
+% t=10.0 g=60.0 b=10000 p=-10001 c=-10001#
+%% goal height=60.0, max depth=5.0
+% t=0.0 g=60.0 b=10000 p=0 c=100000#
+% t=10.0 g=60.0 b=10000 p=150 c=100000#
+% t=22.0 g=60.0 b=10000 p=152 c=100000#
+% t=34.0 g=60.0 b=10000 p=0 c=100000#
+% t=46.0 plus 1.0 g=60.0 b=10000 p=150 c=100000#
+% t=58.0 plus 1.0 g=60.0 b=800 p=152 c=952#
+% t=70.0 plus 1.0 g=60.0 b=* p=0 c=*
+Package widows-and-orphans Info: Widow on page 7 (second column)
+%% goal height=60.0, max depth=5.0
+% t=10.0 g=60.0 b=10000 p=0 c=100000#
+% t=22.0 plus 1.0 g=60.0 b=10000 p=302 c=100000#
+% t=34.0 plus 1.0 g=60.0 b=10000 p=0 c=100000#
+% t=46.0 plus 2.0 g=60.0 b=10000 p=150 c=100000#
+% t=58.0 plus 2.0 g=60.0 b=100 p=152 c=252#
+% t=70.0 plus 2.0 g=60.0 b=* p=0 c=*
+Package widows-and-orphans Info: Widow on page 8 (first column)
+[7
+]
+%% goal height=60.0, max depth=5.0
+% t=10.0 g=60.0 b=10000 p=0 c=100000#
+% t=22.0 plus 1.0 g=60.0 b=10000 p=150 c=100000#
+% t=34.0 plus 1.0 g=60.0 b=10000 p=152 c=100000#
+% t=46.0 plus 1.0 g=60.0 b=10000 p=0 c=100000#
+% t=58.0 plus 2.0 g=60.0 b=100 p=302 c=402#
+% t=70.0 plus 2.0 g=60.0 b=* p=0 c=*
+Package widows-and-orphans Info: Orphan and widow on page 8 (first and second
+(widows-and-orphans)             column)
+%% goal height=60.0, max depth=5.0
+% t=10.0 g=60.0 b=10000 p=0 c=100000#
+% t=22.0 plus 1.0 g=60.0 b=10000 p=302 c=100000#
+% t=34.0 plus 1.0 g=60.0 b=10000 p=0 c=100000#
+% t=46.0 plus 2.0 g=60.0 b=10000 p=302 c=100000#
+% t=58.0 plus 2.0 g=60.0 b=100 p=0 c=100#
+% t=58.0 plus 2.0 plus 1.0fil g=60.0 b=0 p=-10000 c=-10000#
+[8]
+%% goal height=60.0, max depth=5.0
+% t=0.0 g=60.0 b=10000 p=0 c=100000#
+% t=10.0 g=60.0 b=10000 p=-10001 c=-10001#
+(wao011.aux)
